[project]
name = "deep-scholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.9",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.5",
    "langchain-text-splitters>=1.1.2",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
]
